--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <span id="slide-3"></span>
                 <div class="image-container">
                   <img src="./imggg/p1.jpg" class="slide" width="500" height="300" />
-                  <img src="imggg/p2.png" class="slide" width="500" height="300" />
-                  <img src="imgg/p3.jpg" class="slide" width="500" height="300" />
+                  <img src="./imggg/p2.png" class="slide" width="500" height="300" />
+                  <img src="./imgg/p3.jpg" class="slide" width="500" height="300" />
                 </div>
                 <div class="buttons">
                   <a href="#slide-1"></a>
